--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,6 +59,10 @@ a:hover {
     text-indent: -9999px;
 }
 
+#matrix td:first-child a {
+    display: inline;
+}
+
 #matrix td a:hover {
     background-color: lightblue;
 }
