--- a/styles/styles.css
+++ b/styles/styles.css
@@ -202,6 +202,9 @@ select {font-size:.9em; }
     border-right: 1px solid #333;
     font-weight: bold;
     font-size: .8em;
+    background-image: url(images/vertical06.jpg);
+    background-repeat: no-repeat;
+    background-position: 0 0;
 }
 
 #courses a:hover
@@ -213,6 +216,9 @@ select {font-size:.9em; }
     border-left: 1px solid #333;
     border-bottom: 1px solid #fff;
     border-right: 1px solid #fff;
+    background-image: url(images/vertical06a.jpg);
+    background-repeat: no-repeat;
+    background-position: 0 0;
 }
 
 #courses ul ul li { margin: 0; }
